tests/machine/x/go/group_items_iteration.error
Error on line 0: run error: exit status 1
# command-line-arguments
../../../tests/machine/x/go/group_items_iteration.go:39:12: invalid operation: _cast[int]((float64(total) + _cast[float64](_cast[map[string]any](x)["val"]))) (value of type int) is not an interface

1: //go:build ignore
